# cpp-builder

./: .gitignore  CMakeLists.txt  Dockerfile.linux  Dockerfile.windows  build.sh
app/: main.cpp
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake
include/example/: sha.hpp
src/example/: sha.cpp
